--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+spring.datasource.url=jdbc:mysql://localhost:6033/app_db?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=GMT
+spring.datasource.username=db_user
+spring.datasource.password=raphael-infnet
+spring.jpa.hibernate.ddl-auto=create
